--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
       <div id="lead-content">
         <h1>Daniel Szakacs</h1>
         <h2>Software Engineer</h2>
-        <a href="#" class="btn-rounded-white">Download Resume</a>
+        <a href="cv/CV_2025.docx" download class="btn-rounded-white"
+          >Download Resume</a
+        >
       </div>
       <!-- End #lead-content -->
 
@@ -182,6 +184,28 @@
             <!-- End .project-info -->
           </div>
           <!-- End .project -->
+
+          <div class="project shadow-large">
+            <div class="project-image">
+              <img src="images/titanic.jpg" />
+            </div>
+            <!-- End .project-image -->
+            <div class="project-info">
+              <h3>Titanic Machine Learning from Disaster</h3>
+              <p>
+                This project is based on the Titanic - Machine Learning from
+                Disaster dataset from Kaggle. The goal is to predict which
+                passengers survived the Titanic shipwreck using machine learning
+                techniques.
+              </p>
+              <a
+                href="https://github.com/DanielSzakacs/ML-Titanic-Machine-Learning-from-Disaster"
+                target="_blank"
+                >GitHub <i class="fa fa-github" aria-hidden="true"></i
+              ></a>
+            </div>
+            <!-- End .project-info -->
+          </div>
         </div>
       </div>
     </div>
